<resources>
    <string name="app_name">Si Timit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tigamitramalang">tigamitramalang</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="article_text">
        Perusahaan kami (PT. Tiga Mitra Surabaya Cab Malang) bergerak dalam bidang Distributor Bahan Bangunan, Supplier serta Agen Material Bahan Bangunan Modern seperti jual Bata ringan, Panel lantai, Semen mortar, Panel sandwich, Pintu PVC, Plavon PVC, Keramik lantai, Galvalum, Besi, Alumunium, Gypsum, Granit Tile, Tandon Air, Wallpaper Dinding, dll. Kami melayani pengiriman ke seluruh Indonesia.

        Dan selama 8 tahun selalu berkomitmen untuk memberikan pelayanan yang terbaik dan kepuasan pelanggan adalah prioritas utama perusahaan.Kami manjalani bisnis dengan dukungan sumber daya yang berkualitas dan berbekal keahlian dan profesionalisme tenaga kerja yang terlatih dibidangnya. \n\n
    </string>
    <string name="motto">"Pilihan Cerdas dan Berkualitas untuk bangunan Anda"\n</string>
    <string name="alamatmalang">
        Jl.Raya Pakis RT/RW 01/06 Bunut Wetan, Pakis-Kabupaten Malang
    </string>
    <string name="article_text1">
        Perusahaan kami bergerak dalam bidang Distributor Bahan Bangunan, Supplier serta Agen Material Bahan Bangunan Modern seperti jual Bata ringan, Panel lantai, Semen mortar, Panel sandwich, Pintu PVC, Plavon PVC, Keramik lantai, Galvalum, Besi, Alumunium, Gypsum, Granit Tile, Tandon Air, Wallpaper Dinding, dll. Kami melayani pengiriman ke seluruh Indonesia.

        Dan selama 8 tahun selalu berkomitmen untuk memberikan pelayanan yang terbaik dan kepuasan pelanggan adalah prioritas utama perusahaan.Kami manjalani bisnis dengan dukungan sumber daya yang berkualitas dan berbekal keahlian dan profesionalisme tenaga kerja yang terlatih dibidangnya.\n
    </string>
    <string name="visi">Visi\nMenjadi perusahaan perdagangan, penyedia jasa dan pelaksana konstruksi terpilih dan terpercaya di Indonesia.\n\nMisi\nMembangun bisnis yang terintegrasi melalui mutu pelayanan tinggi dan memberikan jaminan kepuasana pelanggan dengan mengedepankan integritas demi menjaga kepercayaan pelanggan dan kelangsungan bisnis yang berlanjut.\n</string>
    <string name="alamatsurabaya">Ruko TCBD-TR1/11, Jl. Raya Klakah Rejo, Klakahrejo, Kec. Benowo, Kota SBY, Jawa Timur 60198</string>
    <string name="isi_faq1">1. Saya tidak tahu cara menghitung estimasi kebutuhannya. Apakah Tiga Mitra bisa menghitungkan?</string>
    <string name="jawab1">JAWAB : Tentu saja CS kami akan membantu anda untuk menghitungkan estimasi kebutuhan serta merekomendasikan produk terbaik</string>
    <string name="isi_faq2">2. Apakah produk yang dijual Tiga Mitra dijamin Asli dari pabrik?</string>
    <string name="jawab2">JAWAB : Kami menjamin semua produk yang kami jual adalah produk asli karena pengiriman kami langsung dari pabrik.</string>
    <string name="isi_faq3">3. Kalau kirim ke luar Pulau Jawa apakah gratis ongkir juga?</string>
    <string name="jawab3"> JAWAB : Untuk pengiriman keluar pulau jawa harga yang kami berikan untuk pengiriman sampai ke depo di Surabaya.</string>
    <string name="isi_faq4">4. Berapa lama Pengiriman barang ke tempat tujuan?</string>
    <string name="jawab4">JAWAB : Untuk pengiriman barang, kami akan proses setelah pembeli melakukan pembayaran dan waktu sekitar 1 jam setelah pembayaran (tergantung seberapa jauh lokasi)</string>
    <string name="isi_faq5">5. Bagaimana cara order material bangunan di Tiga Mitra secara online?</string>
    <string name="jawab5">JAWAB : Anda hanya perlu menghubungi CS kami melalui telfon atau chat whatsapp di nomor yang sudah tertera pada hotline kami.</string>
    <string name="isi_faq6">6. Bisakah saya menjadi reseller dari PT. Tiga Mitra Surabaya?</string>
    <string name="jawab6">JAWAB : Sangat bisa. Dengan melakukan pembelian bata ringan minimal 10,8m3 setelahnya anda bisa mendaftarkan diri untuk menjadi reseller kami. Tentunya akan ada bonus khusus bagi anda yang menjadi reseller kami.</string>
    <string name="isi_faq7">7. Dimana kami dapat membeli produk tigamitrasurabaya?</string>
    <string name="jawab7">JAWAB : Anda dapat membeli produk kami secara online / datang ketempat kami di Ruko TCBD-TR1/11, Jl. Raya Klakah Rejo, Klakahrejo, Kec. Benowo, Kota SBY, Jawa Timur 60198 atau membuka aplikasi onlineshop dan memesan secara online 🙂</string>
    <string name="news_a">Panel Lantai</string>
    <string name="news_b">Semen Mortar</string>
    <string name="news_c">Bata Ringan</string>
<string name="kenapamalang">Kenapa Harus PT. Tiga Mitra Surabaya Cabang Malang ?</string>
    <string name="head_1">panel lantai kokoh dan kuat</string>
    <string name="head_2">semen mortar gampang di apklikasin</string>
    <string name="head_3">bata ringan  presisi</string>
    <string name="kontakkami">
        Telp     : (031)51160405\nWatshapp : 0812-3131-3222
    </string>
    <string name="kontakkami1">
        Telp     : (0341)3059249\nWatshapp : 0821-3213-7447
    </string>
    <string name="jamoperasi">
        Senin - jumat : Jam 08.00-16.00 WIB\nSabtu : Jam 08.00-14.00 WIB
    </string>
    <string name="rekening">
        Pastikan Anda hanya membayar/mentransfer di Rekening Resmi kami\n\nRek Bank BCA\n1870452957 a/n CV Tiga Mitra\n\nRek Bank Mandiri\n141-00-98899-222 a/n PT Tiga Mitra Surabaya\n\nRek Bank BRI\n0583-01-000242-303 a/n CV Tiga Mitra
    </string>
    <string name="isiartikelempat">
        Memiliki rumah tentunya menjadi impian dari setiap orang. Apalagi untuk mereka yang sudah berkeluarga ataupun sedang merencanakan pernikahan. Bicara tentang rumah, generasi millennial saat ini banyak yang mulai sadar pentingnya memiliki rumah di usia yang masih muda karena dapat menjadi salah satu cara untuk berinvestasi.\n\nDalam membangun sebuah rumah sudah pasti kita tidak boleh asal membangun dong. Meskipun tidak memiliki pengetahuan dalam dunia konstruksi, setidaknya kita harus punya sedikit pemahaman tentang apa saja persiapan dalam membangun rumah serta memahami apa saja aspek penting yang harus diperhatikan dalam membangun rumah agar lebih nyaman untuk ditinggali nantinya.\n\nCoba kita fikirkan, ketika kita memperhatikan dan mempertimbangkan dengan baik segala persiapan sebelum membangun rumah, bisa dipastikan hasil akhir yang didapatkan juga akan lebih berkualitas dan sesuai dengan harapan kan ? Nah, maka dari itu sangat penting untuk memahami bagaimana hal yang harus diperhatikan sebelum membangun rumah, apa saja material yang dibutuhkan dan hal penting apa saja yang harus dipahami sebelum membangun rumah.\n\nDan berikut ini ada 3 aspek penting yang harus diperhatikan jika akan membangun rumah. Apa saja 3 aspek penting tersebut ?\n\n
    </string>
    <string name="isiartikelempat1">
        Desain struktur dalam membangun rumah tentunya harus dimulai lebih dulu dengan desain arsitekturnya, agar rumah yang dibangun sesuai dengan yang diinginkan. Struktur bangunan berfungsi untuk meneruskan beban bangunan dari atas hingga ke tanah, supaya bangunan tersebut menjadi lebih kuat. Oleh karena itu, harus dilakukan perencanaan terlebih dahulu untuk menentukan material yang akan digunakan sebagai struktur bangunan serta akan dibuat seperti apa struktur bangunan itu nantinya.\n\n
    </string>
    <string name="isiartikelempat2">
        Untuk membangun rumah, tentunya harus memilih material bangunan yang sesuai dengan kebutuhan serta design dari rumah yang akan dibangun. Jangan lupa untuk menggunakan material bangunan yang berkualitas. Saat ini sudah banyak material bangunan modern yang diciptakan untuk membantu pembangunan agar lebih praktis dan efisien tetunya tetap dengan kualitas yang terjamin. Misalnya menggunakan bata ringan untuk material dinding.\n\nBata ringan menjadi salah satu material dinding yang digemari dan popular karena ukurannya lebih besar serta memiliki bobot yang ringan sehingga memudahkan dalam pengerjaan dinding. Menggunakan panel lantai sebagai pengganti dak cor konvensional, yang tentunya lebih cepat dan praktis dalam pengerjaan bangunan bertingkat. serta penggunaan semen mortar untuk perekat, plesteran maupun acian dinding agar pengerjaan lebih cepat serta memiliki kualitas yang bagus.\n\n
    </string>
    <string name="isiartikelempat3">
        Tentunya kita perlu memilih tukang yang sudah berpengalaman dalam melakukan pembangunan dan memiliki skill serta jam terbang yang sudah lama dalam dunia konstruksi. Karena ketika kita memilih tukang yang sudah berpengalaman, maka kita sudah mengambil pilihan tepat untuk pembangunan rumah. Yang akan menjadikan proyek bangunan tersebut selesai dalam waktu yang sudah ditentukan dan hasilnya pun menjadi lebih maksimal serta sesuai dengan yang kita harapkan. Bukan berarti tidak diperbolehkan memilih tukang yang masih baru dalam dunia konstruksi, namun jika dibandingkan dengan tukang yang belum berpengalaman, banyak hal yang tidak diketahui serta belum tentu bangunan yang dihasilkan nanti akan sesuai dengan kriteria dan impian kita.\n\n
    </string>
    <string name="isiartikelempat4">
        Dengan memperhatikan ketiga aspek tersebut tentunya anda akan lebih mudah dan terarah untuk membangun rumah sesuai dengan keinginan dan pastinya dengan kualitas bahan yang bagus.\n\nOh ya selain dengan memperhatikan 3 Aspek tersebut, jangan lupa juga untuk banyak cari tahu mengenai rekomendasi material yang bagus serta standard digunakan untuk bangunan rumah tinggal yang nyaman. Mulai dari jenis material atap, material dinding, material untuk lantai, pemilihan jenis pintu dan masih banyak lagi. Dan sobat timit semua juga harus melakukan survey harga serta kualitas material yang ada di lapangan sebelum memutuskan untuk memilih material yang akan digunakan agar tidak tertipu oleh oknum yang tidak bertanggung jawab.\n\nJangan lupa juga untuk memilih distributor ataupun toko yang terpercaya dalam membeli material bangunan. Pasalnya di zaman sekarang ini tidak sedikit juga oknum yang bermain curang dalam memasarkan material bangunan. Pastikan cek legalitas perusahaannya, rating dan review customer yang sudah pernah membeli bahan bangunan dari toko tersebut dan kalau bisa datang langsung ke alamat yang tertera untuk mengetahui keberadaan pasti dari kantornya dan pastinya anda juga bisa melihat sampel dari bahan bangunan yang akan dibeli.\n\n
    </string>
    <string name="isiartikelempat5">
        Dan jika sobat timit membutuhkan jasa panel lantai terpasang, jasa konsultan bangunan, jasa pembangunan ataupun jasa renovasi rumah atupun gedung, anda dapat mempercayakan pengerjaannya kepada PT. Tiga Mitra Surabaya karena seluruh tim renovasi dan pembangunan kami memiliki kredibilitas yang tinggi sehingga proses pengerjaan pun menjadi lebih terstuktur, rapi serta dapat dipertanggung jawabkan.\n\nTentunya dengan banyak kemudahan saat transaksi sampai ke pengiriman material dan pengerjaan bangunannya. Untuk penghitungan RAB kami tentunya dilakukan oleh Estimator yang sudah berpengalaman dan tidak perlu diragukan lagi.\n\nUntuk membeli material bangunan dari kami, anda dapat memilih untuk bertransaksi via telepon, whatsapp, atau via official store Tiga Mitra Surabaya di Tokopedia  dan Bukalapak untuk anda yang menginginkan keamanan ekstra dalam bertransaksi. Dan dapatkan banyak promo menarik mulai dari bonus kaos hingga cashback uang tunai dari kami.\n\nJangan ragu untuk membeli material bangunan dari PT. Tiga Mitra Surabaya karena kami adalah Pilihan Cerdas dan Berkualitas untuk Bangunan Anda.\n\n
    </string>
</resources>